--- a/index.html
+++ b/index.html
@@ -647,5 +647,6 @@
 <body>
     <div id="app">  
     </div> 
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
 </body>
 </html>
